testsuite/tests/properties/invalid_at/too_many_args/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun bar_prop(): Int = node.singleton()[0, 12]
}
